--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.10",
     "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.8",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
     "axios": "^1.9.0",
