--- a/package.json
+++ b/package.json
@@ -11,21 +11,27 @@
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.10",
     "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
+    "add": "^2.0.6",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "npx": "^10.2.2",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-slot-counter": "^3.3.1",
     "recharts": "^2.15.3",
+    "separator": "^0.1.0",
+    "shadcn": "^2.5.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
