--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "recharts": "^2.15.3",
     "separator": "^0.1.0",
     "shadcn": "^2.5.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
