--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,30 @@
 {
-  "extends": ["next", "next/core-web-vitals", "eslint:recommended"],
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true,
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "project": "./tsconfig.json",
+  },
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "semi": ["error", "never"],
+    "@typescript-eslint/semi": ["error", "never"],
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-explicit-any": "warn",
+  },
+  "settings": {
+    "react": {
+      "version": "detect",
+    },
   },
 }
